added js functionality

--- a/style.css
+++ b/style.css
@@ -106,6 +106,20 @@ img.header-image {
   display: none;
 }
 
+.rotate {
+  animation: rotate 0.5s ease-in-out;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(180deg);
+  }
+}
+
 @media (min-width: 950px) {
   .wrapper {
     display: grid;
